--- a/app/views/repositories/index.html.erb
+++ b/app/views/repositories/index.html.erb
@@ -10,9 +10,9 @@
     <ul class="contributor-list">
       <% Repository.new(repository.full_name).top_contributors.each do |contributor| %>
         <li>
-          <a href="<%= contributor.html_url %>">
+          <%= link_to contributor.html_url do %>
             <%= image_tag contributor.avatar_url, size: '48x48', class: 'headshot' %>
-          </a>
+          <% end %>
           <div class="popup">
             <h3>Number of Commits</h3>
             <p class="total-commits"><%= contributor.contributions %></p>
