--- a/app/views/repositories/show.html.erb
+++ b/app/views/repositories/show.html.erb
@@ -1,10 +1,10 @@
 <%= link_to '&laquo; Back'.html_safe, root_path, class: 'back-button' %>
-<h1><%= @repository.name %></h1>
+<h1><%= link_to @repository.name, client.repo(@repository) %></h1>
 
 <ul class="contributor-dates">
   <% @repository.contributors.each do |contributor| %>
     <li>
-      <span><%= contributor.login %></span>
+      <span><%= link_to contributor.login, contributor.html_url %></span>
       - <%= time_ago_in_words(Contributor.new(contributor.login, @repository).last_contributed_at) %> ago
     </li>
   <% end %>
